# kbooth

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  old_commands.json
assets/fonts/: License_ZeroCool.txt
assets/settings/: config.ini
src/: Camera.cpp  Camera.h  EscPosCommands.h  Kbooth.h  Printer.cpp  Printer.h  UIWindow.cpp  UIWindow.h  main.cpp
